@@ -28,7 +28,7 @@ import edu.umd.cs.piccolo.util.PBounds;
 
 import static edu.colorado.phet.common.phetcommon.simsharing.Parameter.param;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.numTracks;
-import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.track;
+import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.ParameterKeys.trackIndex;
 import static edu.colorado.phet.energyskatepark.EnergySkateParkSimSharing.UserComponents.toolboxTrack;
 
 /**
@@ -70,11 +70,11 @@ public class SplineToolboxNode extends PNode {
             @Override public ParameterSet getStartDragParameters() {
 
                 //Use the class count to get the new track ID, assumes nothing else will happen between now and then to change that index
-                return super.getStartDragParameters().param( numTracks, energySkateParkSimulationPanel.getEnergySkateParkModel().getNumSplines() + 1 ).param( track, ParametricFunction2D.count );
+                return super.getStartDragParameters().param( numTracks, energySkateParkSimulationPanel.getEnergySkateParkModel().getNumSplines() + 1 ).param( trackIndex, ParametricFunction2D.count );
             }
 
             @Override public ParameterSet getEndDragParameters() {
-                return super.getEndDragParameters().addAll( param( track, createdSurface.getParametricFunction2D().index ) );
+                return super.getEndDragParameters().addAll( param( trackIndex, createdSurface.getParametricFunction2D().index ) );
             }
 
             @Override protected void startDrag( PInputEvent event ) {
